@@ -1,9 +1,10 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-09-23 18:31
+// This file was generated on 2010-09-25 13:08
 
 $extensionPath = t3lib_extMgm::extPath('oelib');
 return array(
+	'tx_oelib_time' => $extensionPath . 'Time.php',
 	'tx_oelib_attachment' => $extensionPath . 'class.tx_oelib_Attachment.php',
 	'tx_oelib_autoloader' => $extensionPath . 'class.tx_oelib_Autoloader.php',
 	'tx_oelib_backendloginmanager' => $extensionPath . 'class.tx_oelib_BackEndLoginManager.php',
