@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4132] Feature: Add a class with time constants
 - [#4129] Fix: Decimals of geo coordinates are cut off in the DB
 - [#3248] Fix: A model without UID should automatically be dirty after setData
 - [#4111] Fix: tx_oelib_List::sort needs to make the list dirty
